--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "devconnector",
+  "name": "cbd-store",
   "version": "1.0.0",
-  "description": "Social network for developers",
+  "description": "online store for cbd users",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Brad Traversy",
+  "author": "Eugene Butenko",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
