--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,16 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
-    "expo": "^32.0.0",
+    "expo": "^33.0.0",
     "native-base": "^2.12.1",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-modal": "^11.0.1",
-    "react-native-status-bar-height": "^2.3.1",
-    "react-navigation": "^3.0.9"
+    "react-native-status-bar-height": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^33.0.0"
   },
   "private": true
 }
