--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-modal": "^11.0.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-status-bar-height": "^2.3.1"
   },
   "devDependencies": {
